# django-app-geo

./: .gitignore  README.md  __init__.py  apps.py  models.py  pyproject.toml  requirements.txt  serializer.py  urls.py
django_app_geo/: __init__.py  app_settings.py  apps.py  views.py
django_app_geo/migrations/: 0001_initial.py
